<resources>
    <string name="chat_draft_preview">Черновик</string>
    <string name="app_name">Barkfluff</string>
    <string name="share_pick_chat_title">Куда отправить?</string>
    <string name="share_pick_chat_subtitle">Через Barkfluff</string>
    <string name="share_preview_label">Что отправить</string>
    <string name="share_no_chats">Нет доступных чатов</string>
    <string name="share_not_authorized">Войдите в Barkfluff, чтобы делиться сюда</string>
    <string name="share_empty">Нечего отправить</string>
    <string name="share_send_to">Отправить в %1$s</string>
    <string name="share_caption_hint">Добавить подпись…</string>
    <string name="share_btn_send">Отправить</string>
    <string name="share_sent_toast">Отправлено в %1$s</string>
    <string name="share_file_count">%1$d файлов</string>
    <string name="welcome_title">"Твоя стая\nуже здесь."</string>
    <string name="welcome_description">Общайтесь без границ — быстро, приватно, только со своей стаей</string>
    <string name="btn_start">Начать</string>
    <string name="menu_privacy">Конфиденциальность</string>
    <string name="welcome_chip_fast">Быстро</string>
    <string name="welcome_chip_private">Приватно</string>
    <string name="welcome_chip_own_pack">Своя стая</string>
    <string name="legal_sheet_title">Условия использования</string>
    <string name="legal_tab_terms">Соглашение</string>
    <string name="legal_tab_privacy">Конфиденциальность</string>
    <string name="legal_accept_checkbox">Я прочитал и принимаю</string>
    <string name="legal_continue_button">Продолжить</string>
    <string name="legal_load_error">Не удалось загрузить документы</string>
    <string name="btn_close">Закрыть</string>
    <string name="login_welcome">"Рады\nвидеть!"</string>
    <string name="login_subtitle">Войдите, чтобы вернуться к своей стае.</string>
    <string name="hint_username_or_email">Имя пользователя или email</string>
    <string name="hint_password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="btn_login">Войти</string>
    <string name="btn_change_server">Изменить ноду</string>
    <string name="action_change">Изменить</string>
    <string name="btn_create_account">Создать аккаунт</string>
    <string name="login_first_time_here">Впервые здесь?</string>
    <string name="login_node_label">Текущая нода</string>
    <string name="login_node_not_selected">Нода не выбрана</string>
    <string name="action_retry">Повторить</string>
    <string name="otp_title">Двухфакторная аутентификация</string>
    <string name="otp_subtitle">Введите код из приложения-аутентификатора</string>
    <string name="btn_confirm">Подтвердить</string>
    <string name="server_title">Выбери ноду</string>
    <string name="server_subtitle">К какой стае подключаемся сегодня?</string>
    <string name="server_public_nodes_label">Публичные ноды</string>
    <string name="server_list_loading">Загрузка публичных нод</string>
    <string name="server_list_empty_title">Публичных нод пока нет</string>
    <string name="server_list_empty_message">Можно подключиться к своей ноде вручную или повторить загрузку каталога.</string>
    <string name="server_list_error_title">Не удалось загрузить ноды</string>
    <string name="server_list_error_message">Проверьте подключение к интернету и попробуйте ещё раз. Ручное подключение доступно ниже.</string>
    <string name="server_list_retry">Повторить</string>
    <string name="server_custom">Подключиться к другому серверу</string>
    <string name="hint_server_address">https://myserver.com:443</string>
    <string name="hint_server_address_example" translatable="false">beacon.servername.com:443</string>
    <string name="node_trust_warning">Подключайтесь только к тем нодам, которым доверяете. Ваши данные хранятся у владельца ноды; разработчик приложения не несёт за них ответственности.</string>
    <string name="btn_connect">Подключиться</string>
    <string name="server_status_checking">Проверка…</string>
    <string name="server_status_online">Онлайн</string>
    <string name="server_status_unavailable">Недоступна</string>
    <string name="server_response_ms">Отклик %1$d мс</string>
    <string name="server_custom_row_title">Своя нода</string>
    <string name="server_custom_row_subtitle">Ввести адрес вручную</string>
    <string name="server_custom_address_helper">Можно с https:// или без него. Порт обязателен, например :443.</string>
    <string name="server_custom_row_collapsed">Свернуто</string>
    <string name="server_custom_row_expanded">Развернуто</string>
    <string name="self_hosted_title">Свой сервер</string>
    <string name="self_hosted_description">Разверните собственный сервер BarkFluff</string>
    <string name="btn_learn_more_server">Узнать больше</string>
    <string name="server_help_hint">Публичные ноды проверяются перед подключением. Для своей ноды укажите адрес Beacon.</string>
    <string name="server_item_name_placeholder">Название ноды</string>
    <string name="server_item_description_placeholder">Описание ноды</string>
    <string name="server_item_handle" translatable="false">\@%1$s</string>
    <string name="tls_invalid_endpoint">Укажите корректный HTTPS-адрес ноды с портом</string>
    <string name="tls_self_signed_title">Самоподписанный сертификат</string>
    <string name="tls_self_signed_message">Нода %1$s использует самоподписанный сертификат.\n\nВладелец: %2$s\nДействителен до: %3$s\n\nСверьте fingerprint с администратором ноды перед подтверждением:\n%4$s</string>
    <string name="tls_changed_pin_title">Сертификат ноды изменился</string>
    <string name="tls_changed_pin_message">Нода %1$s предъявила новый ключ сертификата. Соединение заблокировано.\n\nПрежний fingerprint:\n%2$s\n\nНовый fingerprint:\n%3$s\n\nВладелец: %4$s\nДействителен до: %5$s\n\nПодтверждайте замену только после сверки с администратором ноды.</string>
    <string name="tls_trust_certificate">Доверять сертификату</string>
    <string name="tls_cancel">Отмена</string>
    <string name="tls_forget_certificate">Удалить доверенный сертификат</string>
    <string name="tls_certificate_forgotten">Доверенный сертификат %1$s удалён</string>
    <string name="tls_certificate_invalid">Сертификат endpoint ноды отклонён: проверьте имя хоста и срок действия</string>
    <string name="register_step_1">Личная информация</string>
    <string name="register_step_2">Имя пользователя</string>
    <string name="register_step_3">Электронная почта</string>
    <string name="register_step_4">Подтверждение почты</string>
    <string name="register_step_5">Создание пароля</string>
    <string name="register_step_6">Фото профиля</string>
    <string name="register_step_7">О себе</string>
    <string name="register_step_8">Двухфакторная аутентификация</string>
    <string name="register_step_9">Готово</string>
    <string name="register_title">Создание нового аккаунта</string>
    <string name="register_step_indicator">Шаг 1 из 9</string>
    <string name="register_step1_subtitle">Расскажите немного о себе</string>
    <string name="hint_first_name_required">Имя *</string>
    <string name="hint_last_name">Фамилия</string>
    <string name="register_first_name_hint">Имя может содержать любые символы</string>
    <string name="register_first_name_length">Минимум 3 символа, максимум 40</string>
    <string name="register_last_name_hint">Фамилия может отсутствовать</string>
    <string name="register_step2_subtitle">Придумайте уникальный логин</string>
    <string name="hint_login_required">Логин *</string>
    <string name="register_login_rules">Логин может содержать:</string>
    <string name="register_login_rule_latin">Латинские буквы (a-z)</string>
    <string name="register_login_rule_digits">Цифры (0-9)</string>
    <string name="register_login_rule_symbols">Нижнее подчёркивание (_)</string>
    <string name="register_login_max_length">Максимум 30 символов</string>
    <string name="register_login_lowercase">Будет преобразован в нижний регистр</string>
    <string name="register_step3_subtitle">Для подтверждения и восстановления доступа</string>
    <string name="hint_email_required">Почта *</string>
    <string name="register_email_for_2fa">Для двухфакторной аутентификации</string>
    <string name="register_email_for_reset">Для сброса пароля</string>
    <string name="register_email_for_login_alerts">Для уведомлений о входе</string>
    <string name="register_step4_subtitle">Мы отправили код подтверждения на вашу почту</string>
    <string name="hint_verify_code_required">Код подтверждения *</string>
    <string name="register_check_inbox">Проверьте папку «Входящие»</string>
    <string name="register_check_spam">Проверьте папку со спамом</string>
    <string name="register_step5_subtitle">Придумайте надежный пароль</string>
    <string name="hint_password_required">Пароль *</string>
    <string name="hint_password_confirm_required">Подтвердите пароль *</string>
    <string name="register_password_start_typing">Начните вводить пароль</string>
    <string name="register_password_requirements">Требования к паролю:</string>
    <string name="register_password_req_length">Минимум 8 символов</string>
    <string name="register_password_req_upper">Заглавные буквы</string>
    <string name="register_password_req_lower">Строчные буквы</string>
    <string name="register_password_req_digit">Цифры</string>
    <string name="register_password_req_special">Специальные символы</string>
    <string name="register_password_case_hint">Используйте комбинацию букв разного регистра</string>
    <string name="register_password_digits_hint">Добавьте цифры и специальные символы</string>
    <string name="register_step6_subtitle">Добавьте фото или пропустите этот шаг</string>
    <string name="register_pick_photo_from_gallery">Выбрать фото из галереи</string>
    <string name="register_skip_step">Пропустить этот шаг</string>
    <string name="register_photo_visibility_hint">Фото будет видно другим пользователям</string>
    <string name="register_step7_title">Настройка профиля</string>
    <string name="register_step2_headline">Придумай\n@логин</string>
    <string name="register_step2_hint">Уникальный адрес твоей стаи.</string>
    <string name="register_rule_az">a–z</string>
    <string name="register_rule_09">0–9</string>
    <string name="register_rule_underscore">_</string>
    <string name="register_rule_max30">до 30</string>
    <string name="create_group_title">Новая группа</string>
    <string name="create_group_name_hint">Название группы</string>
    <string name="create_group_avatar">Добавить обложку</string>
    <string name="create_group_search_members">Найти участников</string>
    <string name="create_group_members_empty">Участники не выбраны</string>
    <string name="create_group_confirm">Создать</string>
    <string name="cd_send">Отправить</string>
    <string name="cd_play">Воспроизвести</string>
    <string name="btn_delete">Удалить</string>
    <string name="chat_folders_settings_title">Папки чатов</string>
    <string name="chat_folders_empty_title">Пока нет папок</string>
    <string name="chat_folders_empty_subtitle">Создайте папку, чтобы быстро переключаться между группами чатов</string>
    <string name="chat_folders_new_folder">Новая папка</string>
    <string name="folder_edit_title">Папка</string>
    <string name="folder_name_hint">Название папки</string>
    <string name="folder_icon">Иконка</string>
    <string name="folder_manage_chats">Управлять чатами</string>
    <string name="folder_delete">Удалить папку</string>
    <string name="folder_save">Сохранить</string>
    <string name="msg_action_reply">Ответить</string>
    <string name="msg_action_edit">Изменить</string>
    <string name="msg_action_forward">Переслать</string>
    <string name="message_pin">Закрепить</string>
    <string name="voice_draft_title">Голосовой черновик</string>
    <string name="cd_voice_discard">Удалить запись</string>
</resources>